--- a/index.html
+++ b/index.html
@@ -356,9 +356,6 @@
                                     Python 呢！？”。是的，你是喜欢 Python。你是把当做了既不急躁也不很浪漫的 Ruby。（You just consider her the boring
                                     version of the edgy and romantic Ruby）
                                 </li>
-                                <li><strong>嘉娃（Java）</strong>
-                                    是一位成功的职场女性。有些和她一起共事的人认为，之所以她可以在她那个岗位，虽然能力有所欠缺，但她给中层管理人员留下了好印象。或许你认为她是那种明智类型的，你应当和她一起定居。不过你要准备好在多年之中听不到“接口类型错误、遗漏分号”这样的絮叨。
-                                </li>
                                 <li>......</li>
                                 <p>
                                     <a href="https://www.quora.com/Programming-Languages/In-laymans-terms-what-are-the-major-programming-languages-and-what-are-they-used-for"
@@ -458,6 +455,11 @@
                         <div class="fluid-width-video-wrapper">
                             <video controls="controls" src="./videos/纸飞机.mp4"
                                    style="max-width: 1100px;width: 100%;"></video>
+                                <marquee onmouseover="this.stop()" onmouseout="this.start()" style="width: 100%; max-width: 1100px;top: -500px;">
+                                     <h4 style="color: #ffffff;">前方高能！&nbsp;&nbsp;&nbsp;&nbsp;前方高能</br>&nbsp;&nbsp;&nbsp;前方高能！&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;awsl&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;学废了</br>
+                                         &nbsp;&nbsp;学到了</br>
+                                     </h4>
+                                </marquee>
                         </div>
                     </span>
                     <div class="inner">
