--- a/blog.html
+++ b/blog.html
@@ -285,6 +285,11 @@
                         <div class="fluid-width-video-wrapper">
                             <video controls="controls" src="./videos/纸飞机.mp4"
                                    style="max-width: 1100px;width: 100%;"></video>
+								   <marquee onmouseover="this.stop()" onmouseout="this.start()" style="width: 100%; max-width: 1100px;top: -500px;">
+								        <h4 style="color: #ffffff;">前方高能！&nbsp;&nbsp;&nbsp;&nbsp;前方高能</br>&nbsp;&nbsp;&nbsp;前方高能！&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;awsl&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;学废了</br>
+								            &nbsp;&nbsp;学到了</br>
+								        </h4>
+								   </marquee>
                         </div>
                     </span>
                     <div class="inner">
